# deep-learning-from-scratch

./: .gitignore  README.md  deep-learning-from-scratch.cabal  stack.yaml  zero-to-deep-learning.cabal
app/: Ch3.hs  Ch4.hs  Main.hs
data/mnist/: W1.yml  W2.yml  W3.yml  b1.yml  b2.yml  b3.yml
src/: MNIST.hs  NeuralNetwork.hs  Perceptron.hs  SimpleNet.hs
